// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns single PRG and BRQ result 1`] = `
Array [
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "prague_cz",
      "name": "Prague",
      "slug": "prague-czechia",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 50.100833,
      "lng": 14.26,
    },
    "locationId": "PRG",
    "name": "Václav Havel Airport Prague",
    "rank": 1,
    "slug": "vaclav-havel-airport-prague-prague-czechia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "brno_cz",
      "name": "Brno",
      "slug": "brno-czechia",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 49.151389,
      "lng": 16.694444,
    },
    "locationId": "BRQ",
    "name": "Brno–Tuřany",
    "rank": 13,
    "slug": "brno-turany-brno-czechia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
]
`;

exports[`returns single PRG result 1`] = `
Object {
  "airportsCount": undefined,
  "alternativeNames": Array [],
  "autonomousTerritory": null,
  "city": Object {
    "locationId": "prague_cz",
    "name": "Prague",
    "slug": "prague-czechia",
  },
  "country": null,
  "isActive": true,
  "location": Object {
    "lat": 50.100833,
    "lng": 14.26,
  },
  "locationId": "PRG",
  "name": "Václav Havel Airport Prague",
  "rank": 1,
  "slug": "vaclav-havel-airport-prague-prague-czechia",
  "stationsCount": undefined,
  "subdivision": null,
  "timezone": "Europe/Prague",
  "type": "airport",
}
`;
